--- a/app/manifest.json
+++ b/app/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "background_color": "#cae7e7",
   "display": "fullscreen",
   "theme_color": "#cae7e7"
